--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
         </header>
         <div class="header-container profile-box">
-        <img  class= "fade-in" src="profile.gif" alt="Profile Picture">
+        <img  class= "fade-in" src="blob:https://github.com/4fb18eb8-a88f-40ed-82fb-800671622dd4" alt="Profile Picture">
         <div class="intro-text">
          <h1 class="fade-in">Hello, My Name Is</h1>
          <p  class= "fade-in" style="font-size: 22px;"><b>KHUSHNUDA TASMEER</b></p>
@@ -31,5 +31,6 @@
 
 </body>
 </html>
+
 
 
