Fix HTML formatting and update profile image source

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
         </header>
         <div class="header-container profile-box">
-        <img  class= "fade-in" src="https://github.com/khushnudatasmeer/my-portfolio/blob/main/profile.gif" alt="Profile Picture">
+        <img  class= "fade-in" src=<img class="fade-in" src="https://raw.githubusercontent.com/khushnudatasmeer/my-portfolio/main/profile.gif" alt="Profile Picture">>
         <div class="intro-text">
          <h1 class="fade-in">Hello, My Name Is</h1>
          <p  class= "fade-in" style="font-size: 22px;"><b>KHUSHNUDA TASMEER</b></p>
@@ -31,6 +31,7 @@
 
 </body>
 </html>
+
 
 
 
