--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
         </header>
         <div class="header-container profile-box">
-        <img  class= "fade-in" src=<img class="fade-in" src="profile.gif" alt="Profile Picture">
+        <img  class= "fade-in" src=<img class="fade-in" src="https://drive.google.com/file/d/1IvH2gd6dotkXyZuADFUyNcN6lR-gkyUZ/view?usp=sharing" alt="Profile Picture">
         <div class="intro-text">
          <h1 class="fade-in">Hello, My Name Is</h1>
          <p  class= "fade-in" style="font-size: 22px;"><b>KHUSHNUDA TASMEER</b></p>
@@ -31,6 +31,7 @@
 
 </body>
 </html>
+
 
 
 
