--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
       <div class="project-card slide-up">
         <h2>🌐 Portfolio Website</h2>
         <p>My personal portfolio website to showcase my skills, projects, and contact info.</p>
-        <p><strong>Tech:</strong> HTML, CSS, JavaScript</p>
+        <p><strong>Tech:</strong> HTML, CSS </p>
         <a href="#" target="_blank">View Code</a>
       </div>
 
@@ -52,3 +52,4 @@
   </div>
 </body>
 </html>
+
